# ChangeLog for games-rpg/eternal-lands
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-rpg/eternal-lands/ChangeLog,v 1.25 2006/09/03 17:00:40 uberlord Exp $

*eternal-lands-1.3.2 (03 Sep 2006)

  03 Sep 2006; Roy Marples <uberlord@gentoo.org>
  +files/eternal-lands-1.3.2-shader.patch, +eternal-lands-1.3.2.ebuild:
  Version bump, #146023 thanks to Daniel Nilsson.

*eternal-lands-1.3.0-r2 (23 Jul 2006)

  23 Jul 2006; Roy Marples <uberlord@gentoo.org>
  +files/eternal-lands-1.3.0-font.patch,
  +files/eternal-lands-1.3.0-openal.patch, +eternal-lands-1.3.0-r2.ebuild:
  Added patches to fix fonts and clean compile against all portage OpenAL
  versions.

  21 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
  eternal-lands-1.3.0-r1.ebuild:
  seems it works with newer cal3d (bug #141317)

*eternal-lands-1.3.0-r1 (06 Jul 2006)

  06 Jul 2006; Roy Marples <uberlord@gentoo.org>
  +files/eternal-lands-1.3.0-counters.patch, +eternal-lands-1.3.0-r1.ebuild:
  Added a patch to make the new counters actually work.

  06 Jul 2006; Roy Marples <uberlord@gentoo.org> eternal-lands-1.3.0.ebuild:
  Stop compiling with -DFONTS_FIX as it appears to be a bit wonky.

  05 Jul 2006; Roy Marples <uberlord@gentoo.org> eternal-lands-1.3.0.ebuild:
  Added warning about new Auto Update feature causing client to suddenly exit.
  This is a design feature, so go bug the game designers!

*eternal-lands-1.3.0 (04 Jul 2006)

  04 Jul 2006; Roy Marples <uberlord@gentoo.org>
  +files/eternal-lands-1.3.0-update-createdir.patch,
  +eternal-lands-1.3.0.ebuild:
  Version bump.

*eternal-lands-1.2.0_p1-r4 (03 Jul 2006)

  03 Jul 2006; Roy Marples <uberlord@gentoo.org>
  +files/eternal-lands-1.2.0-update-createdir.patch,
  +eternal-lands-1.2.0_p1-r4.ebuild:
  Add a patch to create the directories required for files being auto-updated
  if they do not exist.

*eternal-lands-1.2.0_p1-r3 (21 May 2006)
