@@ -25,14 +25,18 @@ EBUILD eternal-lands-1.3.0-r2.ebuild 3405 RMD160 95cb0162c71c15194ea5dc162e46c51
 MD5 95c48ba3ced1d9fcd496cff75ef1fdc3 eternal-lands-1.3.0-r2.ebuild 3405
 RMD160 95cb0162c71c15194ea5dc162e46c51c69757d09 eternal-lands-1.3.0-r2.ebuild 3405
 SHA256 77562292dc61d6bcedcb30cc09a046c9058bb6eb5aad18b576c9ffc0bc5e795a eternal-lands-1.3.0-r2.ebuild 3405
+EBUILD eternal-lands-1.3.2-r1.ebuild 3821 RMD160 daaad87b5fae176519df749c8ca7204503816ef8 SHA1 3422e0669c51138766cd71994701d212942de9f7 SHA256 7e16961f295787a19782c594d7446d68bdeb08bcdf57d76718fbb549ba1ee195
+MD5 d05c8a05f41177993fbcd3b97da41251 eternal-lands-1.3.2-r1.ebuild 3821
+RMD160 daaad87b5fae176519df749c8ca7204503816ef8 eternal-lands-1.3.2-r1.ebuild 3821
+SHA256 7e16961f295787a19782c594d7446d68bdeb08bcdf57d76718fbb549ba1ee195 eternal-lands-1.3.2-r1.ebuild 3821
 EBUILD eternal-lands-1.3.2.ebuild 3829 RMD160 e5e9260eb2eafa8471d3fbb6eded87a2933f9afa SHA1 feea8f434b7dc9f920b40036c75dfa8a2c1847ae SHA256 76ea6a0b73d34bf5483f226a813b127a475513b43793299955724d2f83ac9d57
 MD5 712262bc6a133e052af2d2c542085c66 eternal-lands-1.3.2.ebuild 3829
 RMD160 e5e9260eb2eafa8471d3fbb6eded87a2933f9afa eternal-lands-1.3.2.ebuild 3829
 SHA256 76ea6a0b73d34bf5483f226a813b127a475513b43793299955724d2f83ac9d57 eternal-lands-1.3.2.ebuild 3829
-MISC ChangeLog 5042 RMD160 4cc0507bb8bf59e1bc0d21483127ee8f6a5afc56 SHA1 21c6e6fea1f83cc8d5d81c1f20f4d2f93bfe81c3 SHA256 4b4b2bbf7e270f2c6d13a29edf49ccd3621771d76bb332d5223bf6c71074f9e3
-MD5 63e51b87d82bb38d3c0f138327b13052 ChangeLog 5042
-RMD160 4cc0507bb8bf59e1bc0d21483127ee8f6a5afc56 ChangeLog 5042
-SHA256 4b4b2bbf7e270f2c6d13a29edf49ccd3621771d76bb332d5223bf6c71074f9e3 ChangeLog 5042
+MISC ChangeLog 5223 RMD160 b22f2d21ad0f1dae497cfa33f8cf7387d508e688 SHA1 e548abbb8f9fd53b0805308381a3a0445a6029c1 SHA256 a88c9045cb2791328aaba54461e45b8c683022edc884e475579aa17d2cc3e516
+MD5 7893bf2a8bb3af236e9175a24a251b51 ChangeLog 5223
+RMD160 b22f2d21ad0f1dae497cfa33f8cf7387d508e688 ChangeLog 5223
+SHA256 a88c9045cb2791328aaba54461e45b8c683022edc884e475579aa17d2cc3e516 ChangeLog 5223
 MISC metadata.xml 365 RMD160 c06f3d4bff68a5e0f8ab2da3dc62c3d0cc570a20 SHA1 a123414bf441b960af386b5bc08bba88777011ae SHA256 0a477bd6a9085aca7e4538f81c3b9d7710cead2395d222f9903c898df57b3e63
 MD5 a20195e09a3313e5b377c3c4ecc29e26 metadata.xml 365
 RMD160 c06f3d4bff68a5e0f8ab2da3dc62c3d0cc570a20 metadata.xml 365
@@ -43,3 +47,6 @@ SHA256 53503f94d087461511bfffd09ac0ff5bea124b1e70e587c28636e5b0da658b0a files/di
 MD5 12f6c58dae8173cf2932f215f9ca6b45 files/digest-eternal-lands-1.3.2 452
 RMD160 eec2d29d08f3eb35d6336714e713331c6ef6d17c files/digest-eternal-lands-1.3.2 452
 SHA256 80a53ea5c8ee0e14e49559e1b77ad58e7210d88f6b43a0e92021d8b8127a2809 files/digest-eternal-lands-1.3.2 452
+MD5 12f6c58dae8173cf2932f215f9ca6b45 files/digest-eternal-lands-1.3.2-r1 452
+RMD160 eec2d29d08f3eb35d6336714e713331c6ef6d17c files/digest-eternal-lands-1.3.2-r1 452
+SHA256 80a53ea5c8ee0e14e49559e1b77ad58e7210d88f6b43a0e92021d8b8127a2809 files/digest-eternal-lands-1.3.2-r1 452
