@@ -1,6 +1,13 @@
 # ChangeLog for games-rpg/eternal-lands
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/eternal-lands/ChangeLog,v 1.25 2006/09/03 17:00:40 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/eternal-lands/ChangeLog,v 1.26 2006/09/05 08:02:15 uberlord Exp $
+
+*eternal-lands-1.3.2-r1 (05 Sep 2006)
+
+  05 Sep 2006; Roy Marples <uberlord@gentoo.org>
+  +eternal-lands-1.3.2-r1.ebuild:
+  NEW_WEATHER is broken, don't use it.
+  Install shaders.
 
 *eternal-lands-1.3.2 (03 Sep 2006)
 
